--- a/templates/apps/directorio/contacto/create.html
+++ b/templates/apps/directorio/contacto/create.html
@@ -4,7 +4,7 @@
 
             <!-- START -->
             <div class="justify-self-start">
-                <h1 class="font-bold text-xl flex items-center gap-2">Crear Contacto</h1>
+                <h1 class="text-primary font-bold text-xl flex items-center gap-2">Crear Contacto</h1>
             </div>
 
             <!-- MIDDLE -->
