--- a/templates/daisyui5/field.html
+++ b/templates/daisyui5/field.html
@@ -4,86 +4,82 @@
 {% if field.is_hidden %}
     {{ field }}
 {% else %}
-    {% if field|is_checkbox and tag != "td" %}
-        <div class="mb-3 {% if 'form-horizontal' in form_class %} row{% endif %}">
-        {% if label_class %}
-            <div class=" {% for offset in bootstrap_checkbox_offsets %}{{ offset|slice:"7:14" }}{{ offset|slice:"4:7" }}{{ offset|slice:"14:16" }} {% endfor %}{{ field_class }}">
-        {% endif %}
-    {% endif %}
-<{% if tag %}{{ tag }}{% else %}div{% endif %} id="div_{{ field.auto_id }}"
-                                               class=" {% if field|is_checkbox and form_show_labels %}form-check{% else %}mb-3{% if 'form-horizontal' in form_class %} row{% endif %}{% endif %}{% if wrapper_class %} {{ wrapper_class }}{% endif %}{% if field.css_classes %} {{ field.css_classes }}{% endif %}">
-    {% if field.label and not field|is_checkbox and form_show_labels %}
-        {% if field.use_fieldset %}
-            <fieldset{% if 'form-horizontal' in form_class %} class="row"{% endif %}{% if field.aria_describedby %}
-                                                              aria-describedby="{{ field.aria_describedby }}"{% endif %}>
-        {% endif %}
-        <{% if field.use_fieldset %}legend{% else %}label{% endif %}
-                {% if field.id_for_label %}for="{{ field.id_for_label }}"{% endif %}
-                class="{% if field.errors %}text-error{% endif %} {% if 'form-horizontal' in form_class %}col-form-label pt-0{% else %}form-label{% endif %}{% if label_class %} {{ label_class }}{% endif %}{% if field.field.required %} requiredField{% endif %}{% if field.use_fieldset %} fs-6{% endif %}">
-            {{ field.label }}{% if field.field.required %}
-                <span class="asteriskField text-xs text-error">*</span>{% endif %}
-        </{% if field.use_fieldset %}legend{% else %}label{% endif %}>
+<div
+    id="div_{{ field.auto_id }}"
+    class="
+        mb-4
+        {% if wrapper_class %}{{ wrapper_class }}{% endif %}
+        {% if field.css_classes %}{{ field.css_classes }}{% endif %}
+    "
+>
+
+    {# ================= LABEL ================= #}
+    {% if field.label and form_show_labels and not field|is_checkbox %}
+        <label
+            for="{{ field.id_for_label }}"
+            class="label"
+        >
+            <span class="label-text {% if field.errors %}text-error{% endif %}">
+                {{ field.label }}
+                {% if field.field.required %}
+                    <span class="text-error ml-1">*</span>
+                {% endif %}
+            </span>
+        </label>
     {% endif %}
 
+    {# ================= RADIO / CHECKBOX MULTIPLE ================= #}
     {% if field|is_checkboxselectmultiple or field|is_radioselect %}
-        {% include 'daisyui5/layout/radio_checkbox_select.html' %}
-    {% endif %}
+        {% include "daisyui5/layout/radio_checkbox_select.html" %}
 
-    {% if not field|is_checkboxselectmultiple and not field|is_radioselect %}
-        {% if field|is_checkbox and form_show_labels %}
-            <div class="flex items-center justify-start">
-                <div>
-                    {% if field.errors %}
-                        {% crispy_field field 'class' 'checkbox checkbox-error' %}
-                    {% else %}
-                        {% crispy_field field 'class' 'checkbox checkbox-primary' %}
-                    {% endif %}
-                    <label for="{{ field.id_for_label }}"
-                           class="form-check-label{% if field.field.required %} requiredField{% endif %} {% if field.errors %}text-error{% endif %}">
-                        {{ field.label }}{% if field.field.required %}
-                            <span class="asteriskField text-xs text-error">*</span>{% endif %}
-                    </label>
-                </div>
-            </div>
-            {% include 'daisyui5/layout/help_text_and_errors.html' %}
-        {% else %}
-            {% if field_class %}
-                <div class="{{ field_class }}">{% endif %}
-        {% if field|is_file %}
-            {% include 'daisyui5/layout/field_file.html' %}
-        {% elif field|is_select %}
-            {% if field.errors %}
-                {% crispy_field field 'class' 'select-error w-full' %}
-            {% else %}
-                {% crispy_field field 'class' 'w-full' %}
-            {% endif %}
-        {% elif field|is_checkbox %}
+    {# ================= SINGLE CHECKBOX ================= #}
+    {% elif field|is_checkbox %}
+        <label class="flex items-center gap-3 cursor-pointer">
             {% if field.errors %}
                 {% crispy_field field 'class' 'checkbox checkbox-error' %}
             {% else %}
-                {% crispy_field field 'class' 'checkbox' %}
+                {% crispy_field field 'class' 'checkbox checkbox-primary' %}
             {% endif %}
-        {% elif field|is_textarea %}
+
+            <span class="{% if field.errors %}text-error{% endif %}">
+                {{ field.label }}
+                {% if field.field.required %}
+                    <span class="text-error ml-1">*</span>
+                {% endif %}
+            </span>
+        </label>
+
+    {# ================= FILE ================= #}
+    {% elif field|is_file %}
+        {% include "daisyui5/layout/field_file.html" %}
+
+    {# ================= SELECT ================= #}
+    {% elif field|is_select %}
+        {% if field.errors %}
+            {% crispy_field field 'class' 'w-full' %}
+        {% else %}
+            {% crispy_field field 'class' 'w-full' %}
+        {% endif %}
+
+    {# ================= TEXTAREA ================= #}
+    {% elif field|is_textarea %}
+        {% if field.errors %}
+            {% crispy_field field 'class' 'textarea textarea-error w-full' %}
+        {% else %}
             {% crispy_field field 'class' 'textarea w-full' %}
-        {% elif field|is_date %}
-            {% crispy_field field 'class' 'input w-full' %}
-        {% elif field.errors %}
+        {% endif %}
+
+    {# ================= DEFAULT INPUT ================= #}
+    {% else %}
+        {% if field.errors %}
             {% crispy_field field 'class' 'input input-error w-full' %}
         {% else %}
             {% crispy_field field 'class' 'input w-full' %}
         {% endif %}
-        {% if not field|is_file %}
-            {% include 'daisyui5/layout/help_text_and_errors.html' %}
-        {% endif %}
-        {% if field_class %}</div>{% endif %}
-        {% endif %}
     {% endif %}
-    {% if field.use_fieldset and field.label and form_show_labels %}</fieldset>{% endif %}
-</{% if tag %}{{ tag }}{% else %}div{% endif %}>
-{% if field|is_checkbox and tag != "td" %}
-    {% if label_class %}
-        </div>
-    {% endif %}
-    </div>
-{% endif %}
+
+    {# ================= HELP + ERRORS ================= #}
+    {% include "daisyui5/layout/help_text_and_errors.html" %}
+
+</div>
 {% endif %}
